test/libsolidity/syntaxTests/structs/recursion/struct_definition_directly_recursive_fixed_array.sol
contract Test {
    struct MyStructName {
        address addr;
        MyStructName[1] x;
    }
}
// ----
// TypeError: (20-96): Recursive struct definition.
